--- a/index.html
+++ b/index.html
@@ -1503,7 +1503,7 @@ JotForm.paymentExtrasOnTheFly([null,null,null,null,{"description":"Basically, we
 <div id="cookie-consent-banner">
     <div class="cookie-consent-container">
         <div class="cookie-consent-text">
-            <h3>🍪 We Value Your Privacy</h3>
+            <h3>We Value Your Privacy</h3>
             <p>We use analytics cookies to improve your experience and understand how our forms are used. You can choose to accept or decline. <a href="https://privacy.microsoft.com/en-us/privacystatement" target="_blank" rel="noopener">Learn more</a></p>
         </div>
         <div class="cookie-consent-buttons">
