--- a/pages/communication-chaos-friends.html
+++ b/pages/communication-chaos-friends.html
@@ -128,11 +128,11 @@ span.FITB-inptCont[data-type=radiobox] label {
 <script>window.enableEventObserver=true</script>
 <script src="https://cdn.jotfor.ms/s/static/9b8542b99a8/static/prototype.forms.js" type="text/javascript"></script>
 <script src="https://cdn.jotfor.ms/s/static/9b8542b99a8/static/jotform.forms.js" type="text/javascript"></script>
-<script src="../js/form/prototype.js" type="text/javascript"></script>
-<script src="../js/form/protoplus.js" type="text/javascript"></script>
-<script src="../js/form/jotform.js" type="text/javascript"></script>
-<script src="../js/shared/vendor/smoothscroll.min.js" type="text/javascript"></script>
-<script src="../js/form/errorNavigation.js" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/s/static/9b8542b99a8/js/pen/toMarkdown.js" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/s/static/9b8542b99a8/js/pen/showdown.js" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/s/static/9b8542b99a8/js/vendor/nicEdit.js" type="text/javascript"></script>
+<script src="../js/form/nicedit-active-state.js" type="text/javascript"></script>
+<script src="../js/form/richtext-image-paste.js" type="text/javascript"></script>
 <!-- Clarity is now loaded only after user consent via cookie-consent.js -->
 <script>
 // Clarity debug mode - set to true with ?clarity_debug=true parameter
