--- a/pages/communication-chaos-friends.html
+++ b/pages/communication-chaos-friends.html
@@ -5,7 +5,12 @@
 <meta name="HandheldFriendly" content="true" />
 <title>Communication Chaos: Friends Version</title>
 
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/stylebuilder/static/form-common.css?v=7df20c2"/>
+<style type="text/css">@media print{*{-webkit-print-color-adjust: exact !important;color-adjust: exact !important;}.form-section{display:inline!important}.form-pagebreak{display:none!important}.form-section-closed{height:auto!important}.page-section{position:initial!important}}</style>
 <link id="custom-font" type="text/css" rel="stylesheet" href="//cdn.jotfor.ms/fonts/?family=Jura" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.67112&themeRevisionID=65660e4b326633110492e01a"/>
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/s/static/9b8542b99a8/css/styles/payment/payment_styles.css?3.3.67112" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/s/static/9b8542b99a8/css/styles/payment/payment_feature.css?3.3.67112" />
 
 <!-- Shared styles -->
 <link type="text/css" rel="stylesheet" href="../css/shared/preferences.css" />
@@ -24,106 +29,6 @@
 <link type="text/css" rel="stylesheet" href="../css/form/errors.css" />
 <link type="text/css" rel="stylesheet" href="../css/form/buttons-progress.css" />
 <link type="text/css" rel="stylesheet" href="../css/form/review-print.css" />
-
-<style type="text/css" id="form-designer-style">
-/*PREFERENCES STYLE*/
-.form-all {
-  font-family: Jura, sans-serif;
-}
-
-.form-label.form-label-auto {
-  display: block;
-  float: none;
-  text-align: left;
-  width: 100%;
-}
-
-.form-line {
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
-.form-all {
-  max-width: 752px;
-  width: 100%;
-}
-
-.form-label.form-label-left,
-.form-label.form-label-right,
-.form-label.form-label-left.form-label-auto,
-.form-label.form-label-right.form-label-auto {
-  width: 230px;
-}
-
-.form-all {
-  font-size: 16px
-}
-
-.supernova .form-all, .form-all {
-  background-color: rgba(0,0,0,0.72);
-}
-
-.form-all {
-  color: #FFFFFF;
-}
-.form-header-group .form-header {
-  color: #FFFFFF;
-}
-.form-header-group .form-subHeader {
-  color: #FFFFFF;
-}
-.form-label-top,
-.form-label-left,
-.form-label-right,
-.form-html,
-.form-checkbox-item label,
-.form-radio-item label,
-span.FITB .qb-checkbox-label,
-span.FITB .qb-radiobox-label,
-span.FITB .form-radio label,
-span.FITB .form-checkbox label,
-[data-blotid][data-type=checkbox] [data-labelid],
-[data-blotid][data-type=radiobox] [data-labelid],
-span.FITB-inptCont[data-type=checkbox] label,
-span.FITB-inptCont[data-type=radiobox] label {
-  color: #FFFFFF;
-}
-.form-sub-label {
-  color: #ffffff;
-}
-
-.supernova {
-  background-color: #F3F3FE;
-}
-.supernova body {
-  background: transparent;
-}
-
-.form-textbox,
-.form-textarea,
-.form-dropdown,
-.form-radio-other-input,
-.form-checkbox-other-input,
-.form-captcha input,
-.form-spinner input {
-  background-color: rgba(255,255,255,0);
-}
-
-.supernova {
-  background-repeat: no-repeat;
-  background-size:cover;
-  background-attachment: fixed;
-  background-position: center top;
-}
-
-.supernova, #stage {
-  background-image: url("https://www.jotform.com/uploads/zeroexeleven/form_files/20170818_185717.691feb69116e05.01278278.jpg");
-}
-.form-all {
-  background-image: none;
-}
-/*PREFERENCES STYLE*/
-</style>
 
 <script>window.enableEventObserver=true</script>
 <script src="https://cdn.jotfor.ms/s/static/9b8542b99a8/static/prototype.forms.js" type="text/javascript"></script>
